<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.openminted.share.annotations</groupId>
  <artifactId>omtd-share-annotations</artifactId>
  <version>2.0.2.0-SNAPSHOT</version>
  <name>OpenMinTeD SHARE (v${omtd-share.version}) Annotations for Java</name>
  <packaging>pom</packaging>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.8</jackson.version>
    <jackson.dataformat.version>${jackson.version}.8</jackson.dataformat.version>
    <omtd-share.version>2.0.2</omtd-share.version>
  </properties>
  <modules>
    <module>omtd-share-annotations-api</module>
    <module>omtd-share-annotations-maven-plugin</module>
    <module>omtd-share-annotations-util</module>
    <module>omtd-share-annotations-doc</module>
  </modules>
  <repositories>
    <repository>
      <id>omtd-releases</id>
      <layout>default</layout>
      <url>https://repo.openminted.eu/content/repositories/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>omtd-snapshots</id>
      <layout>default</layout>
      <url>https://repo.openminted.eu/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>eu.openminted.share.annotations</groupId>
        <artifactId>omtd-share-annotations-api</artifactId>
        <version>2.0.2.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>eu.openminted.share.annotations</groupId>
        <artifactId>omtd-share-annotations-maven-plugin</artifactId>
        <version>2.0.2.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>eu.openminted.share.annotations</groupId>
        <artifactId>omtd-share-annotations-util</artifactId>
        <version>2.0.2.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-core</artifactId>
        <version>3.2.16.RELEASE</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.4</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.5</version>
      </dependency>
      <dependency>
        <groupId>eu.openminted</groupId>
        <artifactId>omtd-model</artifactId>
        <version>${omtd-share.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-xml</artifactId>
        <version>${jackson.dataformat.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-smile</artifactId>
        <version>${jackson.dataformat.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-yaml</artifactId>
        <version>${jackson.dataformat.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-cbor</artifactId>
        <version>${jackson.dataformat.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-invoker-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>3.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.4</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>